--- a/projects/RPi/devices/RPi/linux/linux.arm.conf
+++ b/projects/RPi/devices/RPi/linux/linux.arm.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 6.1.53 Kernel Configuration
+# Linux/arm 6.1.54 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="arm-linux-gnueabihf-gcc (GCC) 13.0.0 20220604 (experimental) [master revision aec868578d8515763d75693c1fdfbc30ff0a1e68]"
 CONFIG_CC_IS_GCC=y
@@ -1944,6 +1944,7 @@ CONFIG_INPUT_GPIO_ROTARY_ENCODER=m
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
+# CONFIG_INPUT_RASPBERRYPI_BUTTON is not set
 CONFIG_RMI4_CORE=y
 # CONFIG_RMI4_I2C is not set
 # CONFIG_RMI4_SPI is not set
@@ -1982,7 +1983,6 @@ CONFIG_SERIO_SERPORT=y
 CONFIG_BRCM_CHAR_DRIVERS=y
 CONFIG_BCM2708_VCMEM=y
 CONFIG_BCM_VCIO=y
-CONFIG_BCM2835_DEVGPIOMEM=m
 CONFIG_BCM2835_SMI_DEV=m
 # CONFIG_RPIVID_MEM is not set
 CONFIG_TTY=y
@@ -2067,6 +2067,7 @@ CONFIG_DEVMEM=y
 # CONFIG_XILLYUSB is not set
 CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_RANDOM_TRUST_BOOTLOADER=y
+CONFIG_RASPBERRYPI_GPIOMEM=y
 # end of Character devices
 
 #
@@ -2215,6 +2216,8 @@ CONFIG_GENERIC_PINCONF=y
 # CONFIG_PINCTRL_SINGLE is not set
 # CONFIG_PINCTRL_STMFX is not set
 # CONFIG_PINCTRL_SX150X is not set
+# CONFIG_PINCTRL_RP1 is not set
+# CONFIG_PINCTRL_BCM2712 is not set
 CONFIG_PINCTRL_BCM2835=y
 
 #
@@ -2239,6 +2242,7 @@ CONFIG_GPIO_CDEV_V1=y
 # CONFIG_GPIO_ALTERA is not set
 CONFIG_GPIO_RASPBERRYPI_EXP=y
 CONFIG_GPIO_BCM_VIRT=y
+# CONFIG_GPIO_BRCMSTB is not set
 # CONFIG_GPIO_CADENCE is not set
 # CONFIG_GPIO_DWAPB is not set
 # CONFIG_GPIO_FTGPIO010 is not set
@@ -3079,6 +3083,12 @@ CONFIG_MEDIA_PLATFORM_DRIVERS=y
 #
 
 #
+# Raspberry Pi media platform drivers
+#
+# CONFIG_VIDEO_RASPBERRYPI_PISP_BE is not set
+# CONFIG_VIDEO_RP1_CFE is not set
+
+#
 # Renesas media platform drivers
 #
 
@@ -3749,6 +3759,9 @@ CONFIG_DRM_TOSHIBA_TC358762=y
 # CONFIG_DRM_V3D is not set
 CONFIG_DRM_VC4=y
 CONFIG_DRM_VC4_HDMI_CEC=y
+# CONFIG_DRM_RP1_DSI is not set
+# CONFIG_DRM_RP1_DPI is not set
+# CONFIG_DRM_RP1_VEC is not set
 # CONFIG_DRM_ETNAVIV is not set
 # CONFIG_DRM_LOGICVC is not set
 # CONFIG_DRM_ARCPGU is not set
@@ -5024,6 +5037,7 @@ CONFIG_PWM_BCM2835=m
 # CONFIG_PWM_FSL_FTM is not set
 # CONFIG_PWM_PCA9685 is not set
 CONFIG_PWM_RASPBERRYPI_POE=m
+# CONFIG_PWM_RP1 is not set
 # CONFIG_PWM_XILINX is not set
 
 #
@@ -5037,6 +5051,7 @@ CONFIG_BRCMSTB_L2_IRQ=y
 
 # CONFIG_IPACK_BUS is not set
 CONFIG_RESET_CONTROLLER=y
+# CONFIG_RESET_BRCMSTB is not set
 # CONFIG_RESET_RASPBERRYPI is not set
 # CONFIG_RESET_SIMPLE is not set
 # CONFIG_RESET_TI_SYSCON is not set
@@ -5052,6 +5067,7 @@ CONFIG_RESET_CONTROLLER=y
 # PHY drivers for Broadcom platforms
 #
 # CONFIG_BCM_KONA_USB2_PHY is not set
+# CONFIG_PHY_BRCM_USB is not set
 # end of PHY drivers for Broadcom platforms
 
 # CONFIG_PHY_CADENCE_TORRENT is not set
