--- a/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
+++ b/projects/RPi/devices/RPi4/linux/linux.aarch64.conf
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 6.1.53 Kernel Configuration
+# Linux/arm64 6.1.54 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="aarch64-linux-gnu-gcc (GCC) 13.0.0 20220604 (experimental) [master revision aec868578d8515763d75693c1fdfbc30ff0a1e68]"
 CONFIG_CC_IS_GCC=y
@@ -2694,6 +2694,7 @@ CONFIG_INPUT_GPIO_ROTARY_ENCODER=m
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
+# CONFIG_INPUT_RASPBERRYPI_BUTTON is not set
 CONFIG_RMI4_CORE=y
 # CONFIG_RMI4_I2C is not set
 # CONFIG_RMI4_SPI is not set
@@ -2733,7 +2734,6 @@ CONFIG_SERIO_SERPORT=y
 CONFIG_BRCM_CHAR_DRIVERS=y
 CONFIG_BCM2708_VCMEM=y
 CONFIG_BCM_VCIO=y
-CONFIG_BCM2835_DEVGPIOMEM=m
 CONFIG_BCM2835_SMI_DEV=m
 # CONFIG_RPIVID_MEM is not set
 CONFIG_TTY=y
@@ -2827,6 +2827,7 @@ CONFIG_DEVPORT=y
 # CONFIG_XILLYUSB is not set
 CONFIG_RANDOM_TRUST_CPU=y
 CONFIG_RANDOM_TRUST_BOOTLOADER=y
+CONFIG_RASPBERRYPI_GPIOMEM=y
 # end of Character devices
 
 #
@@ -3000,6 +3001,8 @@ CONFIG_GENERIC_PINCONF=y
 # CONFIG_PINCTRL_SINGLE is not set
 # CONFIG_PINCTRL_STMFX is not set
 # CONFIG_PINCTRL_SX150X is not set
+# CONFIG_PINCTRL_RP1 is not set
+# CONFIG_PINCTRL_BCM2712 is not set
 CONFIG_PINCTRL_BCM2835=y
 
 #
@@ -3023,6 +3026,7 @@ CONFIG_GPIO_CDEV_V1=y
 # CONFIG_GPIO_ALTERA is not set
 CONFIG_GPIO_RASPBERRYPI_EXP=y
 CONFIG_GPIO_BCM_VIRT=y
+# CONFIG_GPIO_BRCMSTB is not set
 # CONFIG_GPIO_CADENCE is not set
 # CONFIG_GPIO_DWAPB is not set
 # CONFIG_GPIO_EXAR is not set
@@ -3562,6 +3566,7 @@ CONFIG_MFD_WM5102=y
 # CONFIG_MFD_QCOM_PM8008 is not set
 # CONFIG_RAVE_SP_CORE is not set
 # CONFIG_MFD_INTEL_M10_BMC is not set
+# CONFIG_MFD_RP1 is not set
 # CONFIG_MFD_RSMU_I2C is not set
 # CONFIG_MFD_RSMU_SPI is not set
 # end of Multifunction device drivers
@@ -3903,6 +3908,12 @@ CONFIG_MEDIA_PLATFORM_DRIVERS=y
 #
 # Qualcomm media platform drivers
 #
+
+#
+# Raspberry Pi media platform drivers
+#
+# CONFIG_VIDEO_RASPBERRYPI_PISP_BE is not set
+# CONFIG_VIDEO_RP1_CFE is not set
 
 #
 # Renesas media platform drivers
@@ -4577,6 +4588,9 @@ CONFIG_DRM_TOSHIBA_TC358762=y
 CONFIG_DRM_V3D=y
 CONFIG_DRM_VC4=y
 CONFIG_DRM_VC4_HDMI_CEC=y
+# CONFIG_DRM_RP1_DSI is not set
+# CONFIG_DRM_RP1_DPI is not set
+# CONFIG_DRM_RP1_VEC is not set
 # CONFIG_DRM_ETNAVIV is not set
 # CONFIG_DRM_HISI_HIBMC is not set
 # CONFIG_DRM_HISI_KIRIN is not set
@@ -5837,6 +5851,7 @@ CONFIG_COMMON_CLK=y
 
 # CONFIG_LMK04832 is not set
 # CONFIG_COMMON_CLK_MAX9485 is not set
+# CONFIG_COMMON_CLK_RP1 is not set
 CONFIG_COMMON_CLK_HIFIBERRY_DACPLUSHD=m
 CONFIG_COMMON_CLK_HIFIBERRY_DACPRO=m
 # CONFIG_COMMON_CLK_SI5341 is not set
@@ -5980,6 +5995,7 @@ CONFIG_PWM_BCM2835=m
 # CONFIG_PWM_FSL_FTM is not set
 # CONFIG_PWM_PCA9685 is not set
 CONFIG_PWM_RASPBERRYPI_POE=m
+# CONFIG_PWM_RP1 is not set
 # CONFIG_PWM_XILINX is not set
 
 #
@@ -5993,6 +6009,7 @@ CONFIG_ARM_GIC_V3=y
 CONFIG_ARM_GIC_V3_ITS=y
 CONFIG_ARM_GIC_V3_ITS_PCI=y
 # CONFIG_AL_FIC is not set
+# CONFIG_BCM2712_MIP is not set
 CONFIG_BRCMSTB_L2_IRQ=y
 # CONFIG_XILINX_INTC is not set
 CONFIG_PARTITION_PERCPU=y
@@ -6000,6 +6017,7 @@ CONFIG_PARTITION_PERCPU=y
 
 # CONFIG_IPACK_BUS is not set
 CONFIG_RESET_CONTROLLER=y
+# CONFIG_RESET_BRCMSTB is not set
 CONFIG_RESET_RASPBERRYPI=y
 CONFIG_RESET_SIMPLE=y
 # CONFIG_RESET_TI_SYSCON is not set
@@ -6016,6 +6034,7 @@ CONFIG_RESET_SIMPLE=y
 # PHY drivers for Broadcom platforms
 #
 # CONFIG_BCM_KONA_USB2_PHY is not set
+# CONFIG_PHY_BRCM_USB is not set
 # end of PHY drivers for Broadcom platforms
 
 # CONFIG_PHY_CADENCE_TORRENT is not set
