--- a/projects/Rockchip/devices/RK3328/linux/default/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3328/linux/default/linux.aarch64.conf
@@ -4068,6 +4068,7 @@ CONFIG_FB=y
 # CONFIG_FB_OPENCORES is not set
 # CONFIG_FB_S1D13XXX is not set
 # CONFIG_FB_SMSCUFX is not set
+# CONFIG_FB_UDL is not set
 # CONFIG_FB_IBM_GXT4500 is not set
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
@@ -4076,7 +4077,7 @@ CONFIG_FB=y
 CONFIG_FB_CORE=y
 CONFIG_FB_NOTIFY=y
 # CONFIG_FIRMWARE_EDID is not set
-# CONFIG_FB_DEVICE is not set
+CONFIG_FB_DEVICE=y
 CONFIG_FB_SYS_FILLRECT=y
 CONFIG_FB_SYS_COPYAREA=y
 CONFIG_FB_SYS_IMAGEBLIT=y
@@ -5271,6 +5272,7 @@ CONFIG_STAGING_MEDIA_DEPRECATED=y
 #
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
+# CONFIG_FB_TFT is not set
 # CONFIG_KS7010 is not set
 # CONFIG_PI433 is not set
 # CONFIG_XIL_AXIS_FIFO is not set
