--- a/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-no/linux/linux.aarch64.conf
@@ -3756,6 +3756,9 @@ CONFIG_DVB_USB_TECHNISAT_USB2=m
 CONFIG_DVB_USB_TBS5520SE=m
 CONFIG_DVB_USB_TBS5580=m
 CONFIG_DVB_USB_TBS5930=m
+CONFIG_DVB_USB_TBS5530=m
+CONFIG_DVB_USB_TBS5230=m
+CONFIG_DVB_USB_TBS5931=m
 CONFIG_DVB_USB_V2=m
 CONFIG_DVB_USB_AF9015=m
 CONFIG_DVB_USB_AF9035=m
@@ -3973,6 +3976,8 @@ CONFIG_DVB_STB0899=m
 CONFIG_DVB_STB6100=m
 CONFIG_DVB_STV090x=m
 CONFIG_DVB_STV6110x=m
+CONFIG_DVB_TAS2101=m
+CONFIG_DVB_GX1133=m
 CONFIG_DVB_M88DS3103=m
 
 #
@@ -4031,6 +4036,7 @@ CONFIG_DVB_CXD2841ER=m
 CONFIG_DVB_RTL2830=m
 CONFIG_DVB_RTL2832=m
 CONFIG_DVB_SI2168=m
+CONFIG_DVB_CXD2878=m
 CONFIG_DVB_AS102_FE=m
 CONFIG_DVB_ZD1301_DEMOD=m
 CONFIG_DVB_M88RS6060=m
