--- a/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
+++ b/projects/Amlogic-ce/devices/Amlogic-ne/linux/linux.aarch64.conf
@@ -2640,7 +2640,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 # CONFIG_NULL_TTY is not set
 CONFIG_LDISC_AUTOLOAD=y
-# CONFIG_DEVMEM is not set
+CONFIG_DEVMEM=y
 
 #
 # Serial drivers
@@ -7387,6 +7387,7 @@ CONFIG_HAVE_ARCH_KGDB=y
 CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_UBSAN is not set
 CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
+# CONFIG_STRICT_DEVMEM is not set
 # CONFIG_ARM64_PTDUMP_DEBUGFS is not set
 CONFIG_AMLOGIC_USER_FAULT=y
 # CONFIG_PID_IN_CONTEXTIDR is not set
